# FileFlowNagare

./: bun.lockb  package.json  react.code-profile  tsconfig.json  vite.config.ts
server-actix/: Cargo.toml
server-actix/src/: lib.rs
server-actix/src/api/: base_structure.rs  execute_apps.rs  file_system.rs  mod.rs  server_port.rs  test.rs
server-actix/src/ws/: file_system.rs  mod.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: store.ts
src/assets/: filters copy.json  filters.json  index.css  profile.json
src/components/: AsideBar.tsx  DirectoryList.tsx  NavigationDirectory.tsx
src/components/Button/: Button.tsx  style.css
src/components/FileOrganizer/: Button.tsx  FileList.tsx  FilterControls.tsx  FilterSettingsModal.tsx  FolderSummary.tsx  NavigationPanel.tsx
src/components/Filter/: Filter.tsx  filterFiles.ts
src/components/InputText/: InputText.tsx
src/components/Modal/: Modal.tsx  temp-Modal.2css  temp-Modal.2tsx
src/components/Select/: Select.tsx  style.css
src/components/modal/: Modal.tsx  dialog.css
src/contexts/: AppContext.tsx  AppProvider.tsx  AppReducer.tsx  types.d.ts  useAppReducer.tsx
src/contexts/spaces/: fileSystem.ts  filterSettings.ts  navigation.ts  route.ts  userProfiles.ts
src/features/profile/: managerProfile.ts
src/hooks/: useAppContext.tsx  useCreateFilter.tsx  useFileSystem.tsx  useFilterSettings.tsx  useGetDirectory.tsx  useNavigation.tsx  useProfile.tsx  useProfileHook.tsx  useRouter.tsx  useUserProfiles.tsx
src/libs/: time.ts
src/routers/: Router.tsx
(+14 files in other folders)
