[package]
name = "server-actix"
version = "0.0.1"
edition = "2021"
license = "carlos"
description = "Server actix with RestApi WebSocket"

[dependencies]
actix = "0.13.1"
actix-files = "0.6.5"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tauri = { version = "2.0.0-beta", features = [] }
